--- a/PzProject/PzProject.csproj
+++ b/PzProject/PzProject.csproj
@@ -35,13 +35,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MahApps.Metro, Version=1.4.3.0, Culture=neutral, PublicKeyToken=f4fb5a3c4d1e5b4f, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.4.3\lib\net45\MahApps.Metro.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.4.3\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
@@ -64,9 +72,45 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\BILET.cs">
+      <DependentUpon>dbmodel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\dbmodel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dbmodel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\dbmodel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dbmodel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\dbmodel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dbmodel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\FILM.cs">
+      <DependentUpon>dbmodel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\GATUNEK.cs">
+      <DependentUpon>dbmodel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\MIEJSCE.cs">
+      <DependentUpon>dbmodel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Movie.cs" />
     <Compile Include="Model\Room.cs" />
+    <Compile Include="Model\SALA.cs">
+      <DependentUpon>dbmodel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\SEANS.cs">
+      <DependentUpon>dbmodel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Spot.cs" />
+    <Compile Include="Model\ULGA.cs">
+      <DependentUpon>dbmodel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Utility\BindableBase.cs" />
     <Compile Include="Utility\Converters\Corventers.cs" />
     <Compile Include="Utility\NavigationManager.cs" />
@@ -146,6 +190,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="Model\dbmodel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>dbmodel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model\dbmodel.edmx.diagram">
+      <DependentUpon>dbmodel.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -156,13 +207,27 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Model\dbmodel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>dbmodel.edmx</DependentUpon>
+      <LastGenOutput>dbmodel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Model\dbmodel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>dbmodel.edmx</DependentUpon>
+      <LastGenOutput>dbmodel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\movie_img\john_wick.jpg" />
     <Resource Include="Resources\movie_img\kiler.jpg" />
     <Resource Include="Resources\movie_img\psy.jpg" />
     <Resource Include="Resources\movie_img\rambo.jpg" />
     <Resource Include="Resources\movie_img\szklana_pulapka.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
