--- a/PzProject/PzProject.csproj
+++ b/PzProject/PzProject.csproj
@@ -78,6 +78,14 @@
     <Compile Include="Model\BILET.cs">
       <DependentUpon>dbmodel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\DataSet1.cs">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Model\DataSet1.Designer.cs">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Model\dbmodel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -197,6 +205,16 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>dbmodel.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Model\DataSet1.xsc">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Model\DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSet1.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Model\DataSet1.xss">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </None>
     <None Include="Model\dbmodel.edmx.diagram">
       <DependentUpon>dbmodel.edmx</DependentUpon>
     </None>
