--- a/PzProject/packages.config
+++ b/PzProject/packages.config
@@ -4,4 +4,7 @@
   <package id="MahApps.Metro" version="1.4.3" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net452" />
+  <package id="TMDbLib" version="1.0.0" targetFramework="net452" />
 </packages>
