--- a/PzProject/PzProject.csproj
+++ b/PzProject/PzProject.csproj
@@ -35,6 +35,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="MahApps.Metro, Version=1.4.3.0, Culture=neutral, PublicKeyToken=f4fb5a3c4d1e5b4f, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.4.3\lib\net45\MahApps.Metro.dll</HintPath>
       <Private>True</Private>
@@ -43,8 +49,11 @@
       <HintPath>..\packages\MyToolkit.2.5.16\lib\portable-net45+wp8+win8+wpa81\MyToolkit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.4.3\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
@@ -67,10 +76,40 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\BILET.cs">
+      <DependentUpon>DbPz.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\DbPz.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbPz.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\DbPz.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbPz.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\DbPz.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbPz.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\MIEJSCE.cs">
+      <DependentUpon>DbPz.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Movie.cs" />
     <Compile Include="Model\Room.cs" />
+    <Compile Include="Model\SALA.cs">
+      <DependentUpon>DbPz.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Seance.cs" />
+    <Compile Include="Model\SEANS.cs">
+      <DependentUpon>DbPz.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Spot.cs" />
+    <Compile Include="Model\ULGA.cs">
+      <DependentUpon>DbPz.tt</DependentUpon>
+    </Compile>
     <Compile Include="Utility\BindableBase.cs" />
     <Compile Include="Utility\Converters\Corventers.cs" />
     <Compile Include="Utility\NavigationManager.cs" />
@@ -169,6 +208,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="Model\DbPz.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DbPz.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model\DbPz.edmx.diagram">
+      <DependentUpon>DbPz.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -179,13 +225,27 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Model\DbPz.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DbPz.Context.cs</LastGenOutput>
+      <DependentUpon>DbPz.edmx</DependentUpon>
+    </Content>
+    <Content Include="Model\DbPz.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DbPz.edmx</DependentUpon>
+      <LastGenOutput>DbPz.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\movie_img\john_wick.jpg" />
     <Resource Include="Resources\movie_img\kiler.jpg" />
     <Resource Include="Resources\movie_img\psy.jpg" />
     <Resource Include="Resources\movie_img\rambo.jpg" />
     <Resource Include="Resources\movie_img\szklana_pulapka.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
