--- a/PzProject/App.config
+++ b/PzProject/App.config
@@ -8,7 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-       <add name="DatabasePZEntities" connectionString="metadata=res://*/Model.DbModel.csdl|res://*/Model.DbModel.ssdl|res://*/Model.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=projektpz.database.windows.net;initial catalog=DatabasePZ;user id=dawid446;password=Kolanko123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DatabasePZEntities" connectionString="metadata=res://*/Model.DbModel.csdl|res://*/Model.DbModel.ssdl|res://*/Model.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=projektpz.database.windows.net;initial catalog=DatabasePZ;user id=dawid446;password=Kolanko123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DatabasePZEntities1" connectionString="metadata=res://*/Model.ModelPZ.csdl|res://*/Model.ModelPZ.ssdl|res://*/Model.ModelPZ.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=projektpz.database.windows.net;initial catalog=DatabasePZ;user id=dawid446;password=Kolanko123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
